# ray-tracing-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  notes.md
lib/: CMakeLists.txt  libraries_and_submodules.md
ray-tracing-core/: .cproject  .project  CMakeLists.txt
ray-tracing-core-playground/: CMakeLists.txt  ray_tracing_core_playground.cpp
ray-tracing-core-unit-test/: .cproject  .project  ray-tracing-core-unit-test.exe.xml
ray-tracing-core-unit-test/test/: Test.cpp  ray_tracing_unit_test.cpp  ray_tracing_unit_test.h  test_assert_helper.h
ray-tracing-core-unit-test/test/core/: core_test.cpp  core_test.h  hit_record_test.cpp  hit_record_test.h  shape_test.cpp  shape_test.h  texture_coordinate_test.cpp  texture_coordinate_test.h
ray-tracing-core-unit-test/test/geometry/: geometry_test.cpp  geometry_test.h  sphere_test.cpp  sphere_test.h
ray-tracing-core-unit-test/test/material/: lambertian_material_test.cpp  lambertian_material_test.h  material_test.cpp  material_test.h  mockup_material.h  no_material_test.cpp  no_material_test.h
ray-tracing-core-unit-test/test/math/: axis_aligned_bounding_box_test.cpp  axis_aligned_bounding_box_test.h  hit_point_test.cpp  hit_point_test.h  math_test.cpp  math_test.h  ortho_normal_base_test.cpp  ortho_normal_base_test.h  random_test.cpp  random_test.h  ray_test.cpp  ray_test.h  (+2 more)
ray-tracing-core/include/core/: bvh_node.h  bvh_tree.h  camera.h  color.h  configuration.h  hit_record.h  scatter_record.h  scene.h  scene_factory.h  scene_objects_container.h  shape.h  shape_list.h  shape_node.h  test_scene_factory.h  texture_coordinate.h
ray-tracing-core/include/environment/: sky.h
ray-tracing-core/include/geometry/: constant_medium.h  geometry.h  rectangle.h  sphere.h  transform.h
ray-tracing-core/include/material/: blend_materials.h  dielectric_material.h  diffuse_light.h  isotropic_material.h  lambertian_material.h  material.h  metal_material.h  metal_material_test.h  no_material.h
ray-tracing-core/include/math/: axis_aligned_bounding_box.h  blend_function.h  checker_blend_function.h  constants.h  functions.h  hit_point.h  image_channel_blend_function.h  ortho_normal_base.h  perlin_noise.h  perlin_noise_blend_function.h  random.h  ray.h  rectangle.h  sphere.h  test_blend_function.h  types.h
ray-tracing-core/include/pdf/: cosine_pdf.h  geometry_pdf.h  probability_density_function.h
ray-tracing-core/include/texture/: blend_textures.h  checker_texture.h  constant_texture.h  image_texture.h  texture.h
ray-tracing-core/notes/: notes.md
ray-tracing-core/source/: sphere.cpp
ray-tracing-core/source/core/: bvh_node.cpp  bvh_tree.cpp  scene.cpp  shape.cpp  shape_list.cpp  test_scene_factory.cpp
ray-tracing-core/source/geometry/: constant_medium.cpp  rectangle.cpp  sphere.cpp  transform.cpp
ray-tracing-core/source/math/: random.cpp
ray-tracing-core/test/: CMakeLists.txt  rtc_core_test_assert.h  rtc_test_assert.h  test_main.cpp
ray-tracing-core/test/core/: camera_test.cpp  camera_test.h  configuration_test.cpp  configuration_test.h  core_test.cpp  core_test.h  hit_record_test.cpp  hit_record_test.h  scene_test.cpp  scene_test.h  shape_list_test.cpp  shape_list_test.h  shape_test.cpp  shape_test.h  texture_coordinate_test.cpp  texture_coordinate_test.h
ray-tracing-core/test/environment/: environment_test.cpp  environment_test.h  sky_test.cpp  sky_test.h
ray-tracing-core/test/geometry/: constant_medium_test.cpp  constant_medium_test.h  geometry_test.cpp  geometry_test.h  rectangle_test.cpp  rectangle_test.h  sphere_test.cpp  sphere_test.h  transform_test.cpp  transform_test.h
ray-tracing-core/test/material/: dielectric_material_test.cpp  dielectric_material_test.h  diffuse_light_test.cpp  diffuse_light_test.h  isotropic_material_test.cpp  isotropic_material_test.h  lambertian_material_test.cpp  lambertian_material_test.h  material_test.cpp  material_test.h  metal_material_test.cpp  metal_material_test.h  mockup_material.h  no_material_test.cpp  no_material_test.h
ray-tracing-core/test/math/: axis_aligned_bounding_box_test.cpp  axis_aligned_bounding_box_test.h  hit_point_test.cpp  hit_point_test.h  math_test.cpp  math_test.h  ortho_normal_base_test.cpp  ortho_normal_base_test.h  random_test.cpp  random_test.h  ray_test.cpp  ray_test.h  rectangle_test.cpp  rectangle_test.h  sphere_test.cpp  sphere_test.h
ray-tracing-core/test/pdf/: cosine_pdf_test.cpp  cosine_pdf_test.h  geometry_pdf_test.cpp  geometry_pdf_test.h  probability_density_function_test.cpp  probability_density_function_test.h
ray-tracing-core/test/texture/: blend_textures_test.cpp  blend_textures_test.h  checker_texture_test.cpp  checker_texture_test.h  constant_texture_test.cpp  constant_texture_test.h  texture_test.cpp  texture_test.h
ray-tracing-playground/: CMakeLists.txt  debug.md  duration_measurement.h  ray_tracing_json_scene.cpp  ray_tracing_playground.cpp  ray_tracing_playground.h  ray_tracing_test_scene.cpp
ray-tracing-utility/: CMakeLists.txt
ray-tracing-utility/include/iterator/: iterator.h  iterator_exp2.h  iteratro_exp2.h
ray-tracing-utility/include/json/: json.md  rapidjson_deserializer.h  scene_deserializer.h
ray-tracing-utility/include/renderer/: renderer.h  renderer_async.h
ray-tracing-utility/include/utility/: std_helper.h
ray-tracing-utility/include/viewer/: viewer.h  viewer_cimg.h
ray-tracing-utility/source/json/: rapidjson_deserializer.cpp  scene_deserializer.cpp
ray-tracing-utility/source/renderer/: renderer.cpp  renderer_async.cpp
ray-tracing-utility/source/viewer/: viewer_cimg.cpp
ray-tracing-utility/test/: CMakeLists.txt  rtu_test_assert.h  test_main.cpp
ray-tracing-utility/test/iterator/: iterator_exp2_test.cpp  iterator_exp2_test.h  iterator_test.cpp  iterator_test.h
rendering/: .gitignore
scenes/: configuration_square.json  landscape.json  light_diffuse_1.json  light_diffuse_2.json  light_diffuse_3.json  materials.json  materials_blend.json  shapes.json  test_configuration.json  test_light.json  test_scene.json  textures.json
test-suite/: test_assert.h
(+8 files in other folders)
